hphp/test/slow/enum_class/enum_class02.php.expectf
Fatal error: Invalid expression in constant initializer in %s/enum_class02.php on line 10
